--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -32,7 +32,7 @@
       %>
       
       <div class="flash-message w-full <%= bg_class %> border-b p-4 transition-opacity duration-300 ease-in-out" 
-           data-flash-target="message" data-flash-type="<%= type %>">
+           data-flash-messages-target="message" data-flash-type="<%= type %>">
         <div class="container mx-auto px-6">
           <div class="flex items-center justify-center">
             <div class="flex-shrink-0">
@@ -40,7 +40,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="<%= icon_path %>"></path>
               </svg>
             </div>
-            <div class="ml-3 flex-1">
+            <div class="ml-3 justify-center">
               <p class="text-sm font-medium <%= text_class %>">
                 <%= message %>
               </p>
@@ -48,7 +48,7 @@
             <div class="ml-4 flex-shrink-0">
               <button class="inline-flex <%= text_class %> hover:opacity-75 focus:outline-none focus:ring-2 focus:ring-offset-2"
                       data-action="click->flash-messages#dismiss"
-                      data-flash-target="closeButton">
+                      data-flash-messages-target="closeButton">
                 <span class="sr-only">Close</span>
                 <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
