Increase logo size

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="bg-white border-b border-gray-200">
   <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-    <div class="text-2xl font-semibold text-gray-800">
-      <%= link_to "PassPort", root_path %>
+    <div class="text-2xl font-black text-gray-800">
+      <%= link_to "AvoPass", root_path %>
     </div>
     <ul class="flex space-x-6 items-center">
       <li>
